[package]
name = "redpen"
version = "0.1.0"
edition = "2021"
description = "Reserved name for a teensy side-project I'm working on"

documentation = "https://docs.rs/redpen"
homepage = "https://github.com/scooter-dangle/redpen"
license = "Apache-2.0"
repository = "https://github.com/scooter-dangle/redpen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
