[package]
name = "red_pen"
version = "0.1.0"
edition = "2021"
description = "similar name to a teensy project I'm working on"

documentation = "https://docs.rs/redpen"
homepage = "https://crates.io/crates/redpen"
license = "Apache-2.0"
repository = "https://github.com/scooter-dangle/redpen/tree/red_pen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
